--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
 		"forceConsistentCasingInFileNames": true,
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
+		"moduleDetection": "force",
 		"outDir": "dist",
 		"rootDir": "src",
 		"baseUrl": ".",
